[package]
name = "betting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"

[dev-dependencies]
solana-program-test = "1.10.29"
solana-sdk = "1.10.29"
anchor-client = "0.25.0"
home = "0.5.3"
chrono = "0.4.21"

